# personal_website

./: .env  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  ROUTER_SETUP.md  backup.sh  deploy-to-pi.sh  docker-compose.yml  duckdns-updater.sh  portfolio.db
migrations/: 20250920025018_create_projects.sql  20250920025029_seed_projects.sql
nginx/: nginx.conf
nginx/conf.d/: website.conf
src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  state.rs
src/models/: mod.rs  project.rs
src/routes/: mod.rs
static/css/: main.css
templates/: 404.html  home.html  layout.html  project_detail.html  project_fragment.html  projects.html
